--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,9 @@
     <build>
         <plugins>
         	<plugin>
-	            <groupId>org.springframework.boot</groupId>
-	            <artifactId>spring-boot-maven-plugin</artifactId>
+	            <groupId>org.sonarsource.scanner.maven</groupId>
+	            <artifactId>sonar-maven-plugin</artifactId>
+	            <version>3.10.0.2594</version>
 	        </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
